; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_acrusher.c_factor.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_acrusher.c_factor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_PI = common dso_local global double 0.000000e+00, align 8
@M_PI_2 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double, double, double)* @factor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @factor(double %0, double %1, double %2, double %3) #0 {
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  store double %0, double* %5, align 8
  store double %1, double* %6, align 8
  store double %2, double* %7, align 8
  store double %3, double* %8, align 8
  %9 = load double, double* @M_PI, align 8
  %10 = load double, double* %5, align 8
  %11 = load double, double* %6, align 8
  %12 = fsub double %10, %11
  %13 = call double @llvm.fabs.f64(double %12)
  %14 = load double, double* %7, align 8
  %15 = fsub double %13, %14
  %16 = fmul double %9, %15
  %17 = load double, double* %8, align 8
  %18 = fdiv double %16, %17
  %19 = load i64, i64* @M_PI_2, align 8
  %20 = sitofp i64 %19 to double
  %21 = fsub double %18, %20
  %22 = fptosi double %21 to i64
  %23 = call i32 @sin(i64 %22)
  %24 = add nsw i32 %23, 1
  %25 = sitofp i32 %24 to double
  %26 = fmul double 5.000000e-01, %25
  ret double %26
}

declare dso_local i32 @sin(i64) #1

; Function Attrs: nounwind readnone speculatable willreturn
declare double @llvm.fabs.f64(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
